# k5_fw1

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  TODO.md  requirements.txt
App/: CMakeLists.txt  audio.c  board.c  board.h  functions.c  main.c  main1.c  misc.c  misc.h  radio.c  scheduler.c  settings.c  settings.h  version.c  version.h
App/app/: action.c  app.c  dtmf.c  fm.c  generic.c  main.c  menu.c  uart.c
App/driver/: aes.c  aes.h  backlight.c  backlight.h  bk1080.c  bk1080.h  bk4819.c  crc.c  eeprom.c  gpio.h  i2c.c  keyboard.c  st7565.c  system.c  system.h  systick.c  systick.h  uart.c
App/helper/: boot.c
App/ui/: aircopy.c  fmradio.c  helper.c  lock.c  main.c  menu.c  menu.h  scanner.c  welcome.c
Core/: CMakeLists.txt
Core/Inc/: py32f0xx_it.h
Core/Src/: core_main.c  py32f0xx_it.c  startup_py32f030xx.s  system_py32f0xx.c
Core/v1/: CMakeLists.txt
Core/v2/: CMakeLists.txt  py32f030x8.ld
Core/v2/Inc/: main.h
Core/v2/Src/: main.c  startup_py32f030xx.s  system_py32f0xx.c
Drivers/: CMakeLists.txt
Drivers/CMSIS/Device/PY32F0xx/Include/: py32f002ax5.h  py32f003x4.h  py32f003x6.h  py32f003x8.h  py32f030x3.h  py32f030x4.h  py32f030x6.h  py32f030x7.h  py32f030x8.h
Drivers/CMSIS/Device/PY32F0xx/Source/: system_py32f0xx.c
Drivers/PY32F0xx_HAL_Driver/Inc/: py32f0xx_hal_flash.h  py32f0xx_hal_rcc.h  py32f0xx_ll_adc.h  py32f0xx_ll_flash.h  py32f0xx_ll_rcc.h  py32f0xx_ll_tim.h
Drivers/PY32F0xx_HAL_Driver/Src/: py32f0xx_hal_irda.c  py32f0xx_hal_rcc.c  py32f0xx_hal_uart.c  py32f0xx_hal_usart.c  py32f0xx_ll_rcc.c  py32f0xx_ll_spi.c
K5_Driver/: CMakeLists.txt
K5_Driver/driver/: aes.h  backlight.c  bk1080.c  bk4819.c  board.h  crc.h  device.h  gpio.h  i2c.c  keyboard.c  system.c  system.h  systick.c  uart.c  uart.h
K5_Driver/v1/: CMakeLists.txt  adc.c  aes.c  board.c  device.c  gpio.c  spi.c  spi.h  st7565.c  system.c  uart.c
K5_Driver/v2/: CMakeLists.txt  aes.c  board.c  crc.c  gpio.c  st7565.c  uart.c
Utilities/: CMakeLists.txt
Utilities/printf/: CMakeLists.txt  printf.h
cmake/: gcc-arm-none-eabi.cmake
serialtool/: __init__.py  _dump.py  _prog.py  _restore.py  cli.py  msg.py
